# OFCTBot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: README.md  _BotInfo.md
include/: error.hpp  ofct_bot.hpp
include/BotInfoParser/: action.hpp  grammar.hpp
include/MessageParser/: action.hpp  grammar.hpp
include/User/: user_base.hpp  user_bot.hpp  user_human.hpp  user_manager.hpp
src/: ofct_bot.cpp
